<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/actionHome" />
    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_categories"
        android:title="@string/actionCategories" />
    <item
        android:id="@+id/navigation_wishlit"
        android:icon="@drawable/ic_favorite"
        android:title="@string/actionFavourites" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/actionNews" />
    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_person"
        android:title="@string/actionMe" />

</menu>