<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textColorSecondary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="end" >

        <Button
            android:id="@+id/dialog_button_negative"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/dialog_button_positive"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corners_button_accent" />

    </LinearLayout>


</LinearLayout>