<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layoutBackgroundLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_margin="15dp"
        android:background="@color/white" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/check_clipboard"
            android:tint="@color/colorAccentGreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_shopping"
            android:textSize="16sp"
            android:textColor="@color/textColorSecondaryLight"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/order_status_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/order_status"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@drawable/rounded_corners_button_accent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_shopping_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/continue_shopping"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@drawable/rounded_corners_button_green" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/banner_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    </FrameLayout>

</RelativeLayout>
