<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edittextlayout"
        android:layout_below="@id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:hint="@string/current_password"
            android:inputType="textPassword|textNoSuggestions"
            android:textColor="@color/textColorSecondary"
            android:textColorHint="@color/textColorPrimaryDark"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="viewStart"
            android:gravity="start|center_vertical"
            android:layout_marginTop="@dimen/input_field_margin"
            android:background="@drawable/rounded_corners_edittext_dark" />
        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:hint="@string/new_password"
            android:inputType="textPassword|textNoSuggestions"
            android:textColor="@color/textColorSecondary"
            android:textColorHint="@color/textColorPrimaryDark"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="viewStart"
            android:gravity="start|center_vertical"
            android:layout_marginTop="@dimen/input_field_margin"
            android:background="@drawable/rounded_corners_edittext_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/edittextlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners_button_accent" />

    </LinearLayout>

</RelativeLayout>