<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/news_item"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/news_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/product_title"
        android:textAlignment="viewStart"
        android:textColor="@color/textColorSecondary"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/news_image"
        android:layout_alignTop="@+id/news_image" />

    <ImageView
        android:id="@+id/news_date_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_calendar"
        android:tint="@color/colorAccentGreen"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_below="@+id/news_title"
        android:layout_alignStart="@+id/news_title" />

    <TextView
        android:id="@+id/news_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/date"
        android:textAlignment="viewStart"
        android:textColor="@color/textColorPrimaryDark"
        android:layout_below="@+id/news_title"
        android:layout_toEndOf="@+id/news_date_icon" />

    <TextView
        android:id="@+id/news_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textSize="14sp"
        android:text="@string/description"
        android:textAlignment="viewStart"
        android:textColor="@color/textColorSecondaryLight"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/news_date"
        android:layout_alignStart="@+id/news_title" />

</RelativeLayout>